deployment/branch-templates/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: (PRODUCT)-(BRANCH)
  namespace: default
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
  selector:
    app: (PRODUCT)-(BRANCH)
  type: ClusterIP
