deployment/branch-templates/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "x-branch"
    nginx.ingress.kubernetes.io/canary-by-header-value: "(BRANCH)"
  labels:
    app: (PRODUCT)-(BRANCH)
  name: (PRODUCT)-(BRANCH)
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: 377c0f17-854e-4a1b-863d-a1b685ae2ef7.lb.civo.com
    http:
      paths:
      - backend:
          service:
            name: (PRODUCT)-(BRANCH)
            port:
              number: 8080
        path: /
        pathType: Prefix
